# kata_soundex_algorithm_c_plus_plus

./: .gitignore  CMakeLists.txt  README.md  Soundex.cpp  SoundexTest.cpp
